--- a/README.adoc
+++ b/README.adoc
@@ -74,7 +74,7 @@ toc::[]
 ''''
 ====
 
-bla bla blafootnote:[{fn-xxx}]
+//bla bla blafootnote:[{fn-xxx}]
 
 xref:XXX-Activity-99-to-99-|-9.99[Top Section]
 
